Fixed CSS for Firefox - still looks horrible on IE 6. XHTML-changes
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/phpsurveyor@2094 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -11,7 +11,7 @@ img     {
 	    }
 
 
-td,th,a,p,div
+th,a,p,div
 		{
 		font-family:verdana,arial,sans-serif; 
 		font-size:10pt
@@ -180,6 +180,8 @@ span.settingcaption
             width:620px;
             float:center;
             clear:left;
+            margin-bottom: 20px;
+            
     }
 
          
